# testLog

./: .gitignore
testTinyXML/: .gitignore  CMakeLists.txt
testTinyXML/docs/: build_jsoncpp_1.8.4.cpp  read_save.md
testTinyXML/logger/: log4z.cpp  log4z.h  logger.cpp  logger.h
testTinyXML/testReadSave/: CMakeLists.txt  main.cpp  reader.cpp  reader.h  readsave.cpp  readsave.h  rwjson.cpp  rwjson.h
testTinyXML/xmlconfigure/: README.md  config
